feat: 게시글 목록 조회 API 정렬 오류 수정